# otus_hw_1

./: CMakeLists.txt  README.md  format.sh  lib.cc  lib.h  main.cc  test_version.cc
.github/workflows/: release.yaml
